<resources>
    <string name="app_name">CloudReaderTest</string>
    <string name="skip">跳过</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_name">佚名</string>
    <string name="all">全部</string>
    <string name="iOS">iOS</string>
    <string name="android">Android</string>
    <string name="resource">拓展资源</string>
    <string name="front">前端</string>
    <string name="app">App</string>
    <string name="restMovie">休息视频</string>
    <string name="recommend">瞎推荐</string>
    <string name="welfare">福利</string>
    <string name="string_share_text">发现了一个高仿网易云音乐的App，里面有大量IT干货，每天提供安卓，IOS等最新资讯，还有最新电影热映榜和大量书籍信息，大力推荐哦~：https://fir.im/cloudreader</string>
    <string name="item_one_type">类型：</string>
    <string name="item_one_average">评分：</string>
    <string name="item_one_average_num">条评分</string>
    <string name="item_one_main">主演：</string>
    <string name="base_header_more">主演：</string>
    <string name="action_share">分享</string>
    <string name="string_about">由于网易云音乐用了很久，特别喜爱它的界面风格，所以仿写了它的UI。如构成侵权请及时通知我修改或删除。
        \n\n 大部分数据使用的是代码家的https://gank.io和豆瓣APIV2.0，一切数据解释权都归代码家和豆瓣所有。
        \n\n 干货每日推荐内容缓存三天，每天12：30更新，如没有内容则取缓存。电影热映榜每日零点更新。
        \n\n 整体采用Retrofit+RxJava+MvvM-DataBinding框架。
        \n\n 我的GitHub：https://github.com/youlookwhat
        \n\n 项目完全开源，如果你觉得不错，请帮忙Star一下吧，或帮忙分享给你的朋友，这是给我们最大的动力与支持，非常感谢！
    </string>
    <string name="string_about_me">Email: 716774214@qq.com
    </string>
    <string name="string_lib">
         xrecyclerview
        \n zoomlibrary
        \n com.android.support:appcompat-v7:25.1.1
        \n com.android.support:design:25.1.1
        \n com.android.support:cardview-v7:25.1.1
        \n com.squareup.retrofit2:retrofit:2.1.0
        \n io.reactivex:rxandroid:1.2.0
        \n com.nineoldandroids:library:2.4.0
        \n jp.wasabeef:glide-transformations:2.0.1
        \n com.youth.banner:banner:1.4.2
        \n com.daimajia.slider:library:1.1.5@aar
        \n com.cocosw:bottomsheet:1.+@aar
        \n com.google.zxing:core:3.2.1
        \n skin.support:skin-support:1.0.1
        \n skin.support:skin-support-design:0.0.2
    </string>
</resources>
