<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_all"
        android:icon="@mipmap/home_title_all"
        android:title="@string/all" />
    <item
        android:id="@+id/item_iOS"
        android:icon="@mipmap/home_title_ios"
        android:title="@string/iOS" />
    <item
        android:id="@+id/item_android"
        android:icon="@mipmap/home_title_android"
        android:title="@string/android" />
    <item
        android:id="@+id/item_resource"
        android:icon="@mipmap/home_title_source"
        android:title="@string/resource" />
    <item
        android:id="@+id/item_front"
        android:icon="@mipmap/home_title_qian"
        android:title="@string/front" />
    <item
        android:id="@+id/item_app"
        android:icon="@mipmap/home_title_app"
        android:title="@string/app" />
    <item
        android:id="@+id/item_restMovie"
        android:icon="@mipmap/home_title_movie"
        android:title="@string/restMovie" />
    <item
        android:id="@+id/item_recommend"
        android:icon="@mipmap/home_title_xia"
        android:title="@string/recommend" />
    <item
        android:id="@+id/item_welfare"
        android:icon="@mipmap/home_title_meizi"
        android:title="@string/welfare" />
</menu>